<resources>
    <string name="app_name">My First App</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">SEND</string>
    <string name="user_entry">Hello User!</string>
    <string name="sign_in">SignIn</string>
    <string name="sign_up">SignUp</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password">* Password</string>
    <string name="password_re">* Confirm Password</string>
    <string name="phone">* Phone Number</string>
    <string name="success_signup">Sign Up Successfully Completed</string>
    <string name="welcome_image">welcome_image</string>
    <string name="title_activity_login">Sign in</string>
    <string name="error_hint">* This field can\'t be empty</string>
    <string name="password_mismatch">* Passwords didn\'t match</string>
    <string name="invalid_mobile">* Enter a valid 10 digit mobile number</string>
    <string name="user_name">* User Name</string>
    <string name="optional_email">Email (Optional)</string>
    <string name="mandaotry_fields">Fields marked with (*) can\'t be empty</string>
    <string name="prompt_register">No account yet? Create one!</string>
    <string name="prompt_forgot_password">Forgot your password?</string>
</resources>
